# enterprise-ai-platform

./: .env.example  .gitignore  ARCHITECTURE.md  LEARNINGS.md  PROJECT_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/corpus/: documents.json  golden.json
scripts/: agent.py  ask.py  generate_corpus.py  governance.py  ingest.py
src/eaip/: __init__.py  app.py  security.py
src/eaip/config/: __init__.py  settings.py
src/eaip/embeddings/: __init__.py  base.py  bge.py  factory.py  hashing.py
src/eaip/index/: __init__.py  acl_filter.py  pipeline.py  resolver.py  store.py
src/eaip/ingestion/: __init__.py  chunker.py  connectors.py  models.py
src/eaip/orchestration/: __init__.py  graph.py  nodes.py  runner.py  safety.py  service.py  state.py  tools.py
src/eaip/platform/: __init__.py  limits.py  rbac.py  registry.py  tenancy.py
src/eaip/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py  openai.py  stub.py  types.py
src/eaip/retrieval/: __init__.py  answerer.py  dense.py  fusion.py  pipeline.py  reranker.py  reranker_factory.py  service.py  sparse.py
src/eaip/storage/: __init__.py  base.py  memory.py  sqlite.py
tests/: conftest.py  test_agent_safety.py  test_answerer.py  test_app_smoke.py  test_ask_api.py  test_chunker.py  test_config_and_factory.py  test_connectors_and_corpus.py  test_embedder.py  test_fusion.py  test_hitl_durability.py  test_ingestion_pipeline.py  test_limits_and_audit.py  test_memory_tiers.py  test_orchestration.py  test_rbac.py  test_registry.py  test_reranker.py  test_retrieval_permissions.py  test_storage.py  test_stub_provider.py  test_tenancy.py  test_tools.py
