[project]
name = "enterprise-ai-platform"
version = "0.1.0"
description = "A learning-grade reference implementation of an enterprise AI agent platform."
readme = "README.md"
requires-python = ">=3.12"

# --- Phase 0 runtime dependencies -------------------------------------------
# We deliberately keep the installed footprint small in Phase 0 so the smoke
# test runs fast and offline. Heavy / phase-specific deps (LangGraph, Qdrant,
# sentence-transformers, ragas, ...) are declared in optional groups below and
# pulled in only when their phase begins. Each version was checked against PyPI
# on 2026-06-16 (see LEARNINGS.md for the "verify current APIs" note).
dependencies = [
    "fastapi>=0.137,<0.138",
    "uvicorn[standard]>=0.49,<0.50",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "python-dotenv>=1.2,<2",
    "httpx>=0.28,<0.29",            # used by the Ollama/HTTP provider backends
]

[project.optional-dependencies]
# Installed in Phase 1 (ingestion + retrieval core).
rag = [
    "qdrant-client>=1.18,<2",
    "sentence-transformers>=5.5,<6",
    "rank-bm25>=0.2,<0.3",
]
# Installed in Phase 3 (orchestration).
orchestration = [
    "langgraph>=1.2,<2",
    "langchain-core>=1.4,<2",
    "langgraph-checkpoint-sqlite>=3,<4",
]
# Installed in Phase 2/5 when we wire real LLM backends / eval.
llm = [
    "anthropic>=0.109,<1",
    "openai>=2.41,<3",
]
# Installed in Phase 5 (evaluation harness).
eval = [
    "ragas>=0.4,<0.5",
]

[dependency-groups]
# Dev tooling (uv installs these by default into the project venv).
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=0.24",
    "ruff>=0.15,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eaip"]

# --- Ruff: lint + format -----------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
# A pragmatic, teaching-friendly rule set: correctness + import hygiene +
# docstring presence on public modules, without being pedantic.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",  # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "SIM"]  # tests favor explicitness over the "smart" rewrites
# FastAPI's dependency-injection idiom is `param = Depends(...)` in the signature,
# which B008 flags. It's the framework-recommended pattern, so allow it here.
"src/eaip/app.py" = ["B008"]

# --- Pytest ------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
